更新了Linear_Regression部分内容

--- a/Linear Regression/Linear_Regression.ipynb
+++ b/Linear Regression/Linear_Regression.ipynb
@@ -21,16 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,9 +46,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[14],\n",
+       "       [32],\n",
+       "       [50]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 测试代码\n",
     "X = np.array([[1,2,3], [4,5,6], [7,8,9]])\n",
@@ -61,7 +75,69 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#函数功能：将训练集数据按照 miniBatchSize 划分成多个小批数据，默认为 64\n",
+    "#    输入：X 输入数据集，(m, n)\n",
+    "#          y 输出数据集，(m, 1)\n",
+    "#          miniBatchSize，划分后每个小批数据的个数，默认为 64\n",
+    "#          seed 随机数种子，默认为 0\n",
+    "#    输出：miniBatchs 划分好的数据集，放在一个列表中\n",
+    "def randomMiniBatchs(X, y, miniBatchSize = 64, seed = 0):\n",
+    "    m = X.shape[0]             #取得样本个数 m\n",
+    "    np.random.seed(seed)       #设置随机数种子\n",
+    "    miniBatchs = []            #存放分类好的小批数据集\n",
+    "    miniBatch_X = []           #临时存放一个重排序后的小批的输入数据集\n",
+    "    miniBatch_y = []           #临时存放一个重排序后的小批的标签数据集\n",
+    "    miniBatch = ()             #临时存放一个批\n",
+    "    \n",
+    "    permutation = list(np.random.permutation(m))     #将索引随机重排列\n",
+    "    \n",
+    "    numCompleteBatchs = math.floor(m / miniBatchSize)   #存放完整的批的个数\n",
+    "    for i in range(0, numCompleteBatchs):\n",
+    "        miniBatch_X = X[permutation[i * miniBatchSize : (i + 1) * miniBatchSize] ,:]\n",
+    "        miniBatch_y = y[permutation[i * miniBatchSize : (i + 1) * miniBatchSize] ,:]\n",
+    "        miniBatch = (miniBatch_X, miniBatch_y)     #将 miniBatch_X 和 miniBatch_y 打包\n",
+    "        miniBatchs.append(miniBatch)               #将这一批数据放入 miniBatchs 中\n",
+    "    \n",
+    "    if(m % miniBatchSize != 0):\n",
+    "        miniBatch_X = X[permutation[numCompleteBatchs * miniBatchSize : ] ,:]   #将剩下的数据组成一个批\n",
+    "        miniBatch_y = y[permutation[numCompleteBatchs * miniBatchSize : ] ,:]   \n",
+    "        miniBatch = (miniBatch_X, miniBatch_y)\n",
+    "        miniBatchs.append(miniBatch)\n",
+    "    \n",
+    "    return miniBatchs  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#函数功能：线性回归训练，可调 batchSize 进行 SGD、Mini batch GD 或 BGD\n",
+    "#    输入：X_train 是一个 m 行 n 列矩阵，是训练数据\n",
+    "#          y_train 是 X_train 对应的标签，维度是 (m, 1)\n",
+    "#          parameters 是训练参数，维度是 (m, 1)\n",
+    "#          learningRate 是学习率\n",
+    "#          miniBatchSize 是每次更新的批样本数、当 miniBatchSize = 1 时进行的是随机梯度下降、当 miniBatchSize = 其他值进行的是 mini-batch GD\n",
+    "#          iteration 是迭代循环更新的次数\n",
+    "#    输出：训练好的参数 parameters\n",
+    "def linearRegressionTrain(X_train, y_train, parameters, learningRate, iteration, miniBatchSize = 64, seed = 0):\n",
+    "    miniBatchs = []    #用于存放随机重组的小批数据\n",
+    "    miniBatch_X = []   #用于临时存放一批数据的输入\n",
+    "    miniBatch_y = []   #用来临时存放一批数据的标签\n",
+    "    \n",
+    "    miniBatchs = randomMiniBatchs(X_train, y_train, miniBatchSize, seed)   #将数据分批\n",
+    "    \n",
+    "    for itera in range(0, iteration):\n",
+    "        for batchNum in range(0, len(miniBatchs)):\n",
+    "            (miniBatch_X, miniBatch_y) = miniBatchs[batchNum]   #取出第 batchNum 个批的数据\n",
+    "            h = hypothese(miniBatch_X, parameters)              #计算这一批数据的假设函数的结果\n",
+    "            grad = np.dot(miniBatch_X.T, h - miniBatch_y)       #计算梯度\n",
+    "            parameters = parameters - learningRate * grad       #更新参数\n",
+    "    \n",
+    "    return parameters"
+   ]
   }
  ],
  "metadata": {
