Linear Regression 更新

--- a/Linear Regression/Linear_Regression.ipynb
+++ b/Linear Regression/Linear_Regression.ipynb
@@ -46,33 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[14],\n",
-       "       [32],\n",
-       "       [50]])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 测试代码\n",
-    "X = np.array([[1,2,3], [4,5,6], [7,8,9]])\n",
-    "parameters = np.array([[1],[2],[3]])\n",
-    "y = hypothese(X, parameters)\n",
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +84,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#函数功能：在数据前增加一列或一行全为1\n",
+    "#    输入：X_train 原始数据 (m, n)\n",
+    "#          ax = 1表示在最左边加1列， = 0 表示在最上面加一行\n",
+    "#    输出：X 加完后的数组  (m + 1, n) 或 (m, n + 1)\n",
+    "def expendOneCol(X_train, ax = 1):\n",
+    "    X = np.insert(X_train, 0, values = np.ones((1,X_train.shape[(ax+1)%2])), axis = ax)\n",
+    "    return X;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#函数功能：初始化参数\n",
+    "#    输入：m 维度\n",
+    "#    输出：parameters 初始化为 0 的数组 (m, 1)\n",
+    "def initialParameters(m):\n",
+    "    parameters = np.zeros((m, 1))\n",
+    "    return parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#函数功能：计算梯度\n",
+    "#    输入：X_train 训练数据\n",
+    "#          y 标签数据\n",
+    "#          h 假设函数结果\n",
+    "#    输出：grad 梯度\n",
+    "def calculateGrad(X_train, y, h):\n",
+    "    grad = np.dot(X_train.T, h - y)\n",
+    "    return grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#函数功能：计算损失值\n",
+    "#    输入：y 标签\n",
+    "#          h 假设函数结果\n",
+    "#    输出：J 损失值\n",
+    "def calLossFunction(y, h):\n",
+    "    sub = (h - y)\n",
+    "    J = np.dot(sub.T, sub) / 2\n",
+    "    return J"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,9 +170,240 @@
     "            h = hypothese(miniBatch_X, parameters)              #计算这一批数据的假设函数的结果\n",
     "            grad = np.dot(miniBatch_X.T, h - miniBatch_y)       #计算梯度\n",
     "            parameters = parameters - learningRate * grad       #更新参数\n",
+    "            \n",
     "    \n",
     "    return parameters"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model(X_train, y):\n",
+    "    X_train = expendOneCol(X_train)\n",
+    "    (m, n) = X_train.shape\n",
+    "    \n",
+    "    parameters = initialParameters(n)\n",
+    "    \n",
+    "    parameters = linearRegressionTrain(X_train, y, parameters, 0.01, 10)\n",
+    "    \n",
+    "    return parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd   \n",
+    "import numpy as np\n",
+    "\n",
+    "data_X = pd.read_csv('./r_train_X.csv', encoding = 'big5')  #r_train_X.csv文件要与python代码文件(.py或.ipynb)在同一个目录下才行\n",
+    "data_y = pd.read_csv('./r_train_y.csv', encoding = 'big5')  #r_train_y.csv文件要与python代码文件(.py或.ipynb)在同一个目录下才行\n",
+    "X = data_X.to_numpy()  #将数据转换成numpy数据\n",
+    "y = data_y.to_numpy()  #将数据转换成numpy数据"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = model(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan],\n",
+       "       [nan]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
