--- a/Logistic Regression_Generalized Linear Models/Linear_regression_code/Binary_classification.ipynb
+++ b/Logistic Regression_Generalized Linear Models/Linear_regression_code/Binary_classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,18 +127,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def logistic_regression_train(X, y, parameters, iteration = 10000, learning_rate = 0.0003):\n",
+    "def shuffle(X, Y):\n",
+    "    randomize = np.arange(X.shape[0])\n",
+    "    np.random.shuffle(randomize)\n",
+    "    return (X[randomize], Y[randomize])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_to_miniBatch(X, Y, batchSize = 64):\n",
+    "    X_shuffled, Y_shuffled = shuffle(X, Y)    #对样本进行随机打乱\n",
+    "    m, n = X.shape                            #获取样本个数\n",
+    "    completeBatchNum = int(np.ceil(m / batchSize)) #计算完整的 batch 个数\n",
+    "    miniBatchs = []\n",
+    "    \n",
+    "    for i in range(completeBatchNum):\n",
+    "        tempBatch_X = X[i * batchSize : (i + 1) * batchSize]\n",
+    "        tempBatch_Y = Y[i * batchSize : (i + 1) * batchSize]\n",
+    "        miniBatchs.append((tempBatch_X, tempBatch_Y))\n",
+    "    \n",
+    "    if(m % batchSize != 0):\n",
+    "        tempBatch_X = X[completeBatchNum * batchSize :]\n",
+    "        tempBatch_Y = Y[completeBatchNum * batchSize :]\n",
+    "        miniBatchs.append((tempBatch_X, tempBatch_Y))\n",
+    "    \n",
+    "    return miniBatchs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def logistic_regression_train(X, y, parameters, iteration = 1000, learning_rate = 0.0003, train_method = \"batch\", batchSize = 64):\n",
     "    m, n = X.shape\n",
-    "    loss_history = np.zeros((iteration,1))\n",
+    "    \n",
+    "    if(train_method == \"miniBatch\"):\n",
+    "        miniBatchs = split_to_miniBatch(X, y, batchSize)\n",
+    "        batchNum = len(miniBatchs)\n",
+    "    \n",
+    "    if (train_method == \"miniBatch\"):\n",
+    "        subIteration = batchNum\n",
+    "    elif (train_method == \"stochastic\"):\n",
+    "        subIteration = m\n",
+    "    else:\n",
+    "        subIteration = 1\n",
+    "    \n",
+    "    loss_history = np.zeros((iteration * subIteration,1))\n",
     "    \n",
     "    for ite in range(iteration):\n",
-    "        h = hypothese(X, parameters)\n",
-    "        sub = h - y\n",
-    "        gred = cal_gred(X, sub)\n",
-    "        loss_history[ite] = cal_loss(y, h)\n",
-    "        if(ite % 200 == 0):\n",
-    "            print(\"iteration \"+ str(ite) +\" loss: \" +  str(loss_history[ite]))\n",
-    "        parameters = parameters - learning_rate * gred\n",
+    "        for subIte in range(subIteration):\n",
+    "            if (train_method == \"miniBatch\"):    #取出当前循环需要用于计算的 batch\n",
+    "                batch_X, batch_y = miniBatchs[subIte]\n",
+    "            elif (train_method == \"stochastic\"):\n",
+    "                batch_X, batch_y = (X[subIte, : ].reshape(1 , -1), y[subIte].reshape(-1 , 1))\n",
+    "            else:\n",
+    "                batch_X, batch_y = (X, y)\n",
+    "                    \n",
+    "            h = hypothese(batch_X, parameters)\n",
+    "            sub = h - batch_y\n",
+    "            gred = cal_gred(batch_X, sub)\n",
+    "            \n",
+    "            #X_h = hypothese(X, parameters)\n",
+    "            #loss_history[ite] = cal_loss(y, X_h)\n",
+    "            if((ite * subIteration + subIte) % 100 == 0):\n",
+    "                X_h = hypothese(X, parameters)\n",
+    "                loss_history[ite * subIteration + subIte] = cal_loss(y, X_h)\n",
+    "                print(\"iteration \"+ str(ite * subIteration + subIte) +\" loss: \" +  str(loss_history[ite * subIteration + subIte]))\n",
+    "            parameters = parameters - learning_rate * gred\n",
     "        \n",
     "    return parameters"
    ]
@@ -152,8 +213,15 @@
     "def predict(h):\n",
     "    # This function returns a truth value prediction for each row of X \n",
     "    # by rounding the result of logistic regression function.\n",
-    "    return np.round(h).astype(np.int)\n",
-    "    \n",
+    "    return np.round(h).astype(np.int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def accuracy(Y_pred, Y_label):\n",
     "    # This function calculates prediction accuracy\n",
     "    acc = 1 - np.mean(np.abs(Y_pred - Y_label))\n",
@@ -166,12 +234,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def add_col(X):\n",
+    "    m, n = X.shape\n",
+    "    ones = np.ones((m, 1))\n",
+    "    return np.hstack((ones, X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "train_data, train_mean, train_std = normalization(train_data)\n",
     "#dev_data = normalization(dev_data, False, train_mean, train_std)\n",
-    "m, n = train_data.shape\n",
-    "\n",
-    "parameters = np.zeros((n, 1))\n",
-    "parameters = logistic_regression_train(train_data, train_label, parameters, iteration = 10000, learning_rate = 0.0003)"
+    "train_data = add_col(train_data)\n",
+    "m, n = train_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameters = np.zeros((n, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameters = logistic_regression_train(train_data, train_label, parameters, iteration = 1000, learning_rate = 0.00001, train_method = \"batch\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 训练集上的正确率"
    ]
   },
   {
@@ -182,7 +285,15 @@
    "source": [
     "h = hypothese(train_data, parameters)\n",
     "p = predict(h)\n",
-    "acc = accuracy(p, train_label)"
+    "acc = accuracy(p, train_label)\n",
+    "acc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 验证集上的正确率"
    ]
   },
   {
@@ -191,6 +302,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dev_data = normalization(dev_data, False, train_mean, train_std)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dev_data = add_col(dev_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h = hypothese(dev_data, parameters)\n",
+    "p = predict(h)\n",
+    "acc = accuracy(p, dev_label)\n",
     "acc"
    ]
   },
